
* 2013-05-02 - thorben.betten@open-xchange.com

 - Fix for bug 26300: Deal with absent session when checking request-count boundary
 - Fix for bug 26267: Use lenient Cookie parsing policy
 - Fix for bug 26305: Use safe hash calculation to avoid hash collisions
 - Fix for bug 26054: Adapted logging to output USR-0010 error code as DEBUG only

* 2013-04-30 - marc.arens@open-xchange.com

 - Fix for bug 26022: Don't assume defaultcontext
 
* 2013-04-30 - thorben.betten@open-xchange.com

 - Fix for bug 26022: Add capability to deal with an anonymous session in ServerSessionAdapter
 - Fix for bug 26244: Fixed XSS injection using utf-16 content type

* 2013-04-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 25783: Correctly unfold content lines in iCal files   

* 2013-04-29 - thorben.betten@open-xchange.com

 - Fix for bug 26243: Fixed vulnerability of XSS injection by content-type header

* 2013-04-28 - thorben.betten@open-xchange.com

 - Fix for bug 26166: Deal with possible null reference returned by
                      "com.openexchange.mail.api.IMailMessageStorage.getMessage(String, String, boolean)"
 - Fix for bug 26174: Use proper property name for server route
 - Fix for bug 26164: Add capability "deniedPortal" if portal is disabled
 - Fix for bug 25133: Fixed HTTP "Content-Type" header for requested message source content

* 2013-04-27 - thorben.betten@open-xchange.com

 - Fix for bug 26237: Fixed possible XSS vulnerability
 - Fix for bug 26202: Avoid too long log messages if debug is disabled
 - Fix for bug 26186: Refactored config-cascade to not dynamically look-up services via ServiceTracker, using a queue for tracking instead

* 2013-04-26 - thorben.betten@open-xchange.com

 - Fix for bug 26198: Consider "timezone" URL parameter for mail module's ALL and LIST request
 - Fix for bug 26188: Improved error message if a publication has been revoked in the meantime
 - Fix for bug 26221: Convert HTML error message to plain text before logging it
